Fix compilation error; 4.0 is still Java11